feat: add example weather client
