# internal/publicoas/oas_response_encoders_gen.go
@@ -12,6 +12,38 @@ import (
 	"github.com/ogen-go/ogen/uri"
 )
 
+func encodeGetCurrentWeatherResponse(response *CurrentWeatherResponseHeaders, w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json; charset=utf-8")
+	// Encoding response headers.
+	{
+		h := uri.NewHeaderEncoder(w.Header())
+		// Encode "X-Request-Id" header.
+		{
+			cfg := uri.HeaderParameterEncodingConfig{
+				Name:    "X-Request-Id",
+				Explode: false,
+			}
+			if err := h.EncodeParam(cfg, func(e uri.Encoder) error {
+				if val, ok := response.XRequestID.Get(); ok {
+					return e.EncodeValue(conv.StringToString(val))
+				}
+				return nil
+			}); err != nil {
+				return errors.Wrap(err, "encode X-Request-Id header")
+			}
+		}
+	}
+	w.WriteHeader(200)
+
+	e := new(jx.Encoder)
+	response.Response.Encode(e)
+	if _, err := e.WriteTo(w); err != nil {
+		return errors.Wrap(err, "write")
+	}
+
+	return nil
+}
+
 func encodeGetHealthzResponse(response *HealthResponseHeaders, w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	// Encoding response headers.
